<resources>
    <string name="app_name" translatable="false">Nasa APOD</string>
    <string name="twitter_url" translatable="false">https://twitter.com/1ud0v1c</string>
    <string name="github_url" translatable="false">https://github.com/1ud0v1c/nasa-apod</string>
    <string name="play_store_url" translatable="false">https://play.google.com/store/apps/details?id=com.ludovic.vimont.nasaapod</string>

    <!-- Common action -->
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_validate">Validate</string>
    <string name="action_launch">Launch</string>
    <string name="action_retry">Retry</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_range_date">Choose range date</string>
    <string name="action_goto_settings">Go to settings screen</string>

    <!-- HomeActivity -->
    <string name="home_activity_title">APOD: Last %d photos</string>
    <string name="home_activity_photo_content_description">Nasa photo of the day</string>
    <string name="home_activity_image_view_state_content_description">Home Activity ImageView current state</string>
    <string name="home_activity_no_data_title">No data</string>
    <string name="home_activity_no_data_description">We don\'t have any available data for now.\nPlease launch a request.</string>
    <string name="home_activity_loading_title">Loading</string>
    <string name="home_activity_loading_description">A request has been launched, please wait until it succeed.</string>
    <string name="home_activity_no_internet_title">Connection Failed</string>
    <string name="home_activity_no_internet_description">Could not connect to the network.\nPlease check and try again.</string>
    <string name="home_activity_error_title">An error occurred</string>
    <string name="home_activity_display_quota">You still have: %s available requests for the next hour.</string>
    <string name="home_activity_list_footer">You reached the end of the list</string>

    <!-- NumberPicker Dialog -->
    <string name="number_picker_title">Choose a range of days to fetch</string>

    <!-- ProgressBar Dialog -->
    <string name="progress_bar_title">Download in progress</string>
    <string name="progress_bar_text_default_progression">0%</string>
    <string name="progress_bar_text_dynamic_progression">%d%%</string>

    <!-- DetailActivity -->
    <string name="detail_activity_explanation_title">Explanation</string>
    <string name="detail_activity_explanation">\t\t%s</string>
    <string name="detail_activity_photo_date">Photo taken: %s</string>
    <string name="detail_activity_copyright">Copyright: %s</string>
    <string name="detail_activity_share_subject">"Share APOD of: %s</string>
    <string name="detail_activity_image_content_description">DetailActivity selected image</string>
    <string name="detail_activity_image_media_type_content_description">DetailActivity image media type</string>
    <string name="detail_activity_wallpaper_content_description">DetailActivity set as wallpaper button</string>
    <string name="detail_activity_download_content_description">DetailActivity download button</string>
    <string name="detail_activity_share_content_description">DetailActivity share button</string>
    <string name="detail_activity_cannot_set_wallpaper_for_video">We cannot set a video as a Wallpaper</string>

    <!-- SettingsActivity -->
    <string name="settings_activity_title">Settings</string>
    <string name="settings_category_general">General</string>
    <string name="settings_clear_cache_title">Clear image cache</string>
    <string name="settings_cache_size">Cache size: %d MB</string>
    <string name="settings_quota_title">API Quota</string>
    <string name="settings_quota_summary">View current API Quota</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_battery">Set by Battery Saver</string>
    <string name="settings_theme_default">System default</string>
    <string name="settings_layout_title">Layout</string>
    <string name="settings_layout_list">List</string>
    <string name="settings_layout_grid">Grid</string>
    <string name="settings_about_title">About me</string>

    <!-- AboutFragment -->
    <string name="about_activity_title">About me</string>
    <string name="about_activity_twitter_title" translatable="false">Twitter</string>
    <string name="about_activity_twitter_description">You can follow me on Twitter</string>
    <string name="about_activity_github_title" translatable="false">Github</string>
    <string name="about_activity_github_description">Nasa Apod is open-source, check it out on Github</string>
    <string name="about_activity_rate_title">Rate App</string>
    <string name="about_activity_rate_description">If you like Nasa Apod, rate it on the Google Play Store</string>
    <string name="about_activity_licenses_title">Licenses</string>

    <!-- NotificationDialog -->
    <string name="dialog_fragment_notification_permission_title">Get notified!</string>
    <string name="dialog_fragment_notification_permission_description">Discover the vastness of space every day at 9 a.m. thanks to the NASA\'s API</string>
</resources>