<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_number_picker"
        android:icon="@drawable/ic_number_picker"
        android:orderInCategory="100"
        android:title="@string/action_range_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:title="@string/action_goto_settings"
        app:showAsAction="ifRoom" />
</menu>