...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".screens.home.HomeActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_photos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/linear_layout_state_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
...
